data/derived/comb/progs/unify/prog1246.ml.out
Characters 227-228:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a -> 'a list -> 'a list
       but an expression was expected of type 'a -> 'a list -> 'a
       The type variable 'a occurs inside 'a list
